# aim_is_all_you_need

./: .gitignore  .mypy.ini  AGENTS.md  CITATION.cff  CLAUDE.md  CONTEXT.md  LICENSE  Makefile  README.md  cursor-rules.toml  environment.yml  pyproject.toml  requirements.txt
docs/adr/: 0001-earth-reintercept-cycle.md  0002-jupiter-flyby-objective.md  0003-assist-chain-search.md  0004-pump-ladder-vs-vve.md  0005-launch-window-cadence.md  0006-unpowered-jupiter-and-free-return-phasing.md  0007-inner-ladder-phasing-is-not-free.md  0008-doubling-time-retires-veega.md  0009-push-axis-retires-push-past-escape.md  0010-jovian-cycle-phasing-verifier.md
paper/: LICENSE  README.md
src/: CITATION.cff  __init__.py  apoapsis_raise_reintercept.py  assist_chain.py  astro_constants.py  compute_utils.py  conic_kernel.py  heliocentric_reintercept.py  jovian_cycle_phasing.py  jovian_flyby.py  main.py  nozzle_analysis.py  orbit_utils.py  propulsion.py  retrograde_return_legs.py  scenario.py  scenario_catalog.py
tests/: __init__.py  conftest.py  test_apoapsis_raise_reintercept.py  test_assist_chain.py  test_compute_utils.py  test_conic_kernel.py  test_heliocentric_reintercept.py  test_helpers.py  test_jovian_cycle_phasing.py  test_jovian_flyby.py  test_main.py  test_nozzle_analysis.py  test_orbit_utils.py  test_packaging.py  test_propulsion.py  test_retrograde_return_legs.py  test_scenario.py  test_scenario_catalog.py
